# heart_and_field

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  errors.txt  field_and_heart_addendum.md  field_and_heart_contextual_continuation_adr.md  field_and_heart_design.docx  field_and_heart_event_tone_adr.md  field_and_heart_figure_assets.md  field_and_heart_prebake_rendering.md  field_and_heart_technical.docx  game_structure.md  generate_art.py  log.txt  narrative_adjustments.md  narrative_adjustments_2.md  play.command  pyproject.toml  traceback.txt
game/: gui.rpy  options.rpy  screens.rpy
notebooks/: 02_phase_sim.ipynb
scripts/: check.sh  check_summary_pronouns.py  composite_test.py  figure_bake.py  figure_spike.py  figure_spike2.py  figure_spike3.py  figure_stub.py  generate_sprites.py  generate_stock_faces.py  prebake_assets.py  prebake_spike.py  prebake_spike2.py
tests/: test_arcs.py  test_background_generator.py  test_background_pool.py  test_character_factory.py  test_characters.py  test_clock.py  test_clocks.py  test_color_grades.py  test_comfyui.py  test_comfyui_producer.py  test_content_choices.py  test_continuation.py  test_event_secret_wiring.py  test_event_taxonomy.py  test_events.py  test_figure_layout.py  test_figures.py  test_journal.py  test_league.py  test_llm.py  test_motivators.py  test_narrative.py  test_new_game_integration.py  test_outcomes_and_relationships.py  test_overlays.py  test_phase19.py  test_placeholders.py  test_prebake_driver.py  test_quirks.py  test_roster_factory.py  test_save.py  test_scaffold.py  test_scene_compose.py  (+17 more)
(+94 files in other folders)
