[project]
name = "field_and_heart"
version = "0.1.0"
description = "Sports drama simulation — engine + Ren'Py presentation"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["game"]
include = ["engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["game"]
addopts = "-ra"
